MultiportService.yml
apiVersion: v1
kind: Service
metadata:
  name: machine-ip-service-lb1
spec:
  selector:
    app: machine-ip
  ports:
    - name: http
      protocol: TCP
      port: 10101
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 10102
      targetPort: 8080
    - name: metrics
      protocol: TCP
      port: 10103
      targetPort: 8080
    - name: health
      protocol: TCP
      port: 5555
      targetPort: 8080
  type: LoadBalancer
