ServiceWithoutSelector.yml
kind: "Service"
apiVersion: "v1"
metadata:
  name: "external-web"
spec:
  ports:
    - name: "apache"
      protocol: "TCP"
      port: 80
