Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  namespace: default
  name: my-ip-ingress
spec:
  rules:
    - http:
        paths:
          - path: /ip
            pathType: Prefix
            backend:
               service:
                 name: machine-ip-service
                 port:
                   number: 8080
